--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=36,38
+Pos=137,80
 Size=550,680
+Collapsed=0
+
+[Window][Debug]
+Pos=990,120
+Size=116,77
+Collapsed=0
+
+[Window][Asset Cache Metrics]
+Pos=60,60
+Size=361,123
 Collapsed=0
 
