--- a/imgui.ini
+++ b/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=233,99
+Pos=503,109
 Size=550,680
 Collapsed=1
 
 [Window][Debug]
-Pos=381,158
+Pos=785,239
 Size=427,198
 Collapsed=0
 
 [Window][Asset Cache Metrics]
 Pos=209,240
 Size=361,123
+Collapsed=0
+
+[Window][Metrics]
+Pos=26,123
+Size=710,291
 Collapsed=0
 
